# example-package-stephenmyoung

./: .gitignore  LICENSE  pyproject.toml  setup.cfg
src/example_package/: __about__.py  example.py
tests/: __init__.py  example_test.py
