[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "example-package-stephenmyoung"
description = 'A small example package'
readme = "README.md"
requires-python = ">=3.7"
license = "MIT"
keywords = []
authors = [
  { name = "Stephen Young", email = "stephen.m.young@proton.me" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = []
dynamic = ["version"]

[project.urls]
Documentation = "https://github.com/stephen-young/example-package-stephenmyoung#readme"
Issues = "https://github.com/stephen-young/example-package-stephenmyoung/issues"
Source = "https://github.com/stephen-young/example-package-stephenmyoung"

[tool.hatch.version]
path = "src/example_package_stephenmyoung/__about__.py"

[tool.hatch.envs.default]
dependencies = [
  "pytest",
  "pytest-cov",
]
[tool.hatch.envs.default.scripts]
ver = "python --version"
cov = "pytest --cov-report=term-missing --cov-config=pyproject.toml --cov=src/example_package_stephenmyoung --cov=tests {args}"
no-cov = "cov --no-cov {args}"

[[tool.hatch.envs.test.matrix]]
python = ["37", "38", "39", "310", "311"]

[tool.coverage.run]
branch = true
parallel = true
omit = [
  "src/example_package_stephenmyoung/__about__.py",
]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
